--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,19 @@
-#root {
+/* above root and body reposnible for center both horizontal and vertiacal */
+
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
+
+body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+} */
 
 /* App.css */
 .App {
